outputs/tsp_constructive-constructive/2025-09-19_00-14-35/evaluations/problem_eval-633863853030258891_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance based on historical visit patterns, using adaptive weights that emphasize either local optimization or global exploration based on the current tour progress and node centrality.}
                                                                                                                                                                                                ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance based on historical visit patterns, using adaptive weights that emphasize either local optimization or global exploration based on the current tour progress and node centrality.}
                                                                                                                                                                                                ^
SyntaxError: unmatched '}'
